--- a/Sections/Replicazione.tex
+++ b/Sections/Replicazione.tex
@@ -135,7 +135,7 @@ sistema software del genere sfrutta le stesse risorse dell'applicazione (CPU, RA
 deve quindi progettare il tutto rispettando il \textit{principio della minima intrusione}, limitando il più possibile
 quindi le risorse allocate al metalivello di monitoring/supporto dell'applicazione. La replicazione presenta dei costi
 elevati in termine di realizzazione, ma anche di progettazione ed uso delle risorse, quindi deve essere attentamente
-studiata. Ipotizzare guasti singoli semplica la realizzazione dei protocolli, per esempio.
+studiata. Ipotizzare guasti singoli semplifica la realizzazione dei protocolli, per esempio.
 
 Una possibile realizzazione è un sistema tandem, cioè in cui tutto è raddoppiato: l'idea è quella di realizzare un
 sistema fail-safe, per cui una CPU identica l'errore. Ovviamente, un sistema del genere è complesso e costoso.
@@ -277,7 +277,7 @@ lazy o ottimista, aggiorno prima il client e poi le altre copie).
  \item \textit{Aggiornamento di tutte eager}: tutte le copie devono eseguire, mettesi d'accordo (two-phase commit) e
  quindi fornire il risultato: è in questo caso che si potrebbero avere undo
  costosi.
- \item \textit{atomic multicast} un'altra soluzione sarebbe che una copia,
+ \item \textit{Atomic multicast} un'altra soluzione sarebbe che una copia,
  ricevuta la richiesta, la propaga a tutte utilizzando un'operazione di
  multicast atomico
 \end{itemize}
@@ -306,8 +306,8 @@ Questo sistema deve essere correttamente dimensionato (ogni quanto si manda l'im
 comunicazione? Il massimo ritardo accettabile? In generale vi è una macchina apposita per questo compito).
 Nel caso di fail-over, vi sono due diverse politiche da attuare:
 \begin{itemize}
- \item \textit{Attiva-passiva} si attiva una macchina che era passiva
- \item \textit{Attiva-attiva} si sfrutta una macchina che era già attiva
+ \item \textit{Attiva-Passiva} si attiva una macchina che era passiva
+ \item \textit{Attiva-Attiva} si sfrutta una macchina che era già attiva
  per un altro servizio, caricandola ulteriormente.
 \end{itemize}
 Nella politica attiva-passiva abbiamo tempi di fail-over più alti.
