aggiunto PIM al multicast e fatto alcune modifiche

--- a/Sections/Comunicazione.tex
+++ b/Sections/Comunicazione.tex
@@ -62,7 +62,7 @@ quindi spesso ricalcolare l'albero in caso di variazioni! Le varie proposte sono
  utilizzando un sistema di tunneling. Il risultato è che così si sfruttano solo alcuni nodi.
  \item \textit{Multicast Open Shortest Path First}: questo sistema invece si basa sull'altra tecnologia, e cerca di
  ottimizzare l'albero già ottenuto determinato i cammini minimi.
- \item \textit{PIM}: Ragiona ad aree dense e aree in cui molte reti partecipano alla sottoscrizione (possiamo usare il flooding) e aree sparse in cui le reti interessate sono molto distanti.
+ \item \textit{Protocol Indipendent Multicast}: Ragiona ad aree dense e aree in cui molte reti partecipano alla sottoscrizione (possiamo usare il flooding) e aree sparse in cui le reti interessate sono molto distanti.
  \item \textit{Core Based Trees}: si mantengono costanti dei nodi, venendo a definire quindi degli alberi sub-ottimi
  che non variano. In questo modo si limita il costo della variazione dell'albero.
 \end{itemize}
